Closed Bug 344284 Opened 19 years ago Closed 18 years ago

saved search history not imported from Safari

Categories

(Firefox :: Migration, defect)

2.0 Branch
PowerPC
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Firefox 3

People

(Reporter: jbecerra, Assigned: moco)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.1b1) Gecko/20060710 Firefox/2.0b1 Saved form history is not imported from Safari. To recreate: 1. Open Safari, visit google, and search for "mozilla" (making sure Safari is set to remember form data) 2. Close Safari and open Firefox and go to File > Import and select Safari from the list to import data from Safari 3. Open google.com and start typing a search for "mozilla" Expected: Firefox should auto-complete the search string. It is supposed to have imported the saved form history from Safari. Actual: No auto-completion.
gavin / dietrich, this could be a result of the uninitialized rv that we were discusing over email!
Assignee: nobody → sspitzer
Summary: saved form history not imported from Safari → saved form history (and css style sheets?) not imported from Safari
http://lxr.mozilla.org/seamonkey/source/browser/components/migration/src/nsSafariProfileMigrator.cpp#996, rv is uninitialized. I have a patch, but I will confirm that it will also fix this bug.
Status: NEW → ASSIGNED
style sheets is something else (an initialized variable) and I will spin it off to a new bug. there are a couple reason we don't import saved form data. 1) we need to fix nsSafariProfileMigrator::GetMigrateData() to check if there are saved searches (see how nsSafariProfileMigrator::CopyFormData() works), and if so, do something like: *aResult |= nsIBrowserProfileMigrator::FORMDATA; this should cause Form Data to show up in the migration UI (see screen shot), and if checked, will cause us to call CopyFormData() 2) there are other saved form data in ~/Library/Safari/Form Values, but we don't currently have code to extract that. I think issue #1 should be easy to fix, and issue #2 I am not sure. (if you believe http://forums.macosxhints.com/showthread.php?p=329399, that data is encrypted with the "Safari Forms AutoFill" stored in the key chain
Summary: saved form history (and css style sheets?) not imported from Safari → saved form history not imported from Safari
Target Milestone: Firefox 2 beta2 → Firefox 3
I have a patch that will import the RecentSearchStrings (from the google search box in safari) into the searchbar-history of firefox, but that's just the "easy issue" from my comment #3.
Attachment #246378 - Flags: review? → review?(gavin.sharp)
Summary: saved form history not imported from Safari → saved form history (and search history) not imported from Safari
Comment on attachment 246378 [details] [diff] [review] patch Sorry for the delay, this looks fine.
Attachment #246378 - Flags: review?(gavin.sharp) → review+
patch landed. morphing bug to cover "saved search history" and will spin off a new bug about "saved form history", which is a bigger fish (see comment #3). Checking in nsSafariProfileMigrator.cpp; /cvsroot/mozilla/browser/components/migration/src/nsSafariProfileMigrator.cpp,v <-- nsSafariProfileMigrator.cpp new revision: 1.35; previous revision: 1.34 done Checking in nsSafariProfileMigrator.h; /cvsroot/mozilla/browser/components/migration/src/nsSafariProfileMigrator.h,v <-- nsSafariProfileMigrator.h new revision: 1.18; previous revision: 1.17 done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Summary: saved form history (and search history) not imported from Safari → saved search history not imported from Safari
Any chance we can get this patch on the trunk? During M8 testing I am noticing we are little lean on migration.
Bug 363488 covers the issue of the saved form history.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: