fix for bug #344284, saved search history not imported from Safari.  r=gavin